syntax="proto3";

option go_package="./pb;pb";
package publish;

message PublishRequest {
  string token = 1;
  string play_url = 2;
  string cover_url = 3;
  string title = 4;
}
message PublishResponse {
}
message Author {
  int64 id = 1;
  string name = 2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
}
message Vodie {
  int64 id = 1;
  Author author = 2;
  string play_url = 3;
  string cover_url = 4;
  int64 favorite_count = 5;
  int64 comment_count = 6;
  bool is_favorite = 7;
  string title = 8;
}
message FeedRequest {
  string latest_time = 1;
  string token = 2;
}
message FeedResponse {
  repeated Vodie pulishs = 1;
  int64 next_time = 2;
}
message IssueRequest {
  int64 uid = 1;
  int64 mid = 2;
}
message IssueResponse {
  repeated Vodie pulishs = 1;
}

message LikeRequest {
  int64 video_id = 1;
  int64 type = 2;
  string token = 3;
}
message LikeResponse {

}

message FavoriteListRequest {
  int64 user_id = 1;
  int64 my_id = 2;
}
message FavoriteListResponse {
  repeated Vodie vodies = 1;
}
service Publish {
  rpc Publish(PublishRequest) returns (PublishResponse);
}

service Feed{
  rpc Feed(FeedRequest) returns (FeedResponse);
}

service Issue {
  rpc Issue(IssueRequest) returns (IssueResponse);
}

service Like {
  rpc Like(LikeRequest) returns (LikeResponse);
}

service FavoriteList {
  rpc FavoriteList(FavoriteListRequest) returns (FavoriteListResponse);
}